Ensure text entry areas are visible on all devices via consistent border

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -320,3 +320,13 @@ div[class*="pure-u-"] {
   justify-content: center;
   background-color: $chalees-purple;
 }
+
+
+
+// =========
+// = Forms =
+// =========
+
+.pure-input {
+  border: 1px solid hsl(0, 0, 75%);
+}
